# IRC

./: Dockerfile  README.md
src/client/: CMakeLists.txt  Makefile  client  command.c  command.h  main.c  main.h  test.py
src/client/modules/: aes.py  builder.py  connection.py  connection_subscribe.py  createTable.py  files.py  rooms.py
src/lib/SHA256/: SHA256.c
src/lib/fonts/: font.h
src/server/: .socket.h.swp  CMakeLists.txt  Makefile  find_event_file.c  find_event_file.h  font.c  main.c  menu.c  menu.h  server  socket.c  socket.h
src/tests/: create_room_postgres.py  create_salon_postgres.py  create_table_postgres.py  drop_room_postgres.py  select_salon.py  test_connection_database.py  test_postgres.py
